--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Community powered by news and articles",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node node_modules/mocha/bin/mocha",
     "start": "node ./bin/www"
   },
   "repository": {
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "mocha": "^2.4.5",
     "supertest": "^1.2.0"
   }
 }
